Add sign up, sign in, sign out and authentication.
